idream-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idream-ingress
  namespace: idream
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: www.pujasaman.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: idream-api-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idream-ui-service
                port:
                  number: 80
